Bug 19302 - Safari: Promo message overlaps logo when Safari is not expanded
Fixed conflicts in the following files:
	HTML5/Web_ordering_app/index.html
	HTML5/Web_ordering_app/skins/retail/css/mainCSS.css

--- a/skins/retail/css/main.css
+++ b/skins/retail/css/main.css
@@ -234,6 +234,7 @@ footer {
     font-size: 8px;
     height: 100%;
     max-width: 100%;
+    min-width: 47px;
     position: absolute;
     text-align: left;
     width: auto;
